[package]
name = "wt_ext_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 4

[dependencies]
wt_blk = {git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk"}
#wt_blk = {path = "../wt_blk"}
thiserror = "^1.0"
rayon = "^1.7.0"
open = "^4"
color-eyre = { version = "^0.6", default-features = false }

tracing = "^0.1.37"
tracing-subscriber = {version  = "^0.3.16", features = ["tracing-log", "env-filter", "fmt", "std"]}
serde_json = "^1.0"
serde = { version = "^1.0", features = ["serde_derive"] }

eframe = "0.22.0"
